# parameter-golf

./: pyproject.toml
autoresearch/: README.md  autoresearch.py  program.md  results.tsv  train.py
