[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.88.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "mlx>=0.31.1",
    "numpy>=2.4.4",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.3",
]
